# about-time

./: .gitignore  README.md  justfile  makefile  noxfile.py  pyproject.toml  setup.py
.github/workflows/: main.yml
about_time/: __init__.py  about_time.py  core.py  features.py  human.py  human_count.py  human_duration.py  human_throughput.py
requirements/: dev.txt  test.txt
tests/: test_about_time.py  test_core.py  test_human.py  test_human_count.py  test_human_duration.py  test_human_throughput.py
