[build-system]
requires = ["setuptools~=75.3"] # github actions stops at 75.3; the latest 88 yells locally about deprecated license format.
build-backend = "setuptools.build_meta"

[project]
name = "about-time"
version = "4.2.2"
description = "Easily measure timing and throughput of code blocks, with beautiful human friendly representations."
readme = "README.md"
requires-python = ">=3.8, <4"
license = { text = "MIT" }  # can't upgrade format yet, see 'requires' above.
authors = [
    { name = "Rogério Sampaio de Almeida", email = "rsalmei@gmail.com" },
]
keywords = ["track", "tracker", "time", "code", "blocks", "monitor", "statistics", "analytics"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Environment :: Console",
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    # "Programming Language :: Python :: 2",
    # "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.2",
    # "Programming Language :: Python :: 3.3",
    # "Programming Language :: Python :: 3.4",
    # "Programming Language :: Python :: 3.5",
    # "Programming Language :: Python :: 3.6",
    # "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # other classifiers
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/rsalmei/about-time"
